# moegal-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
agent/: graph.py  router.py  state.py  tools.py
bots/qq/: app.py
bots/tg/: app.py  handlers.py
config/: font_conf.py  paths.py  rss_feeds.txt  settings.py
db/: __init__.py  models.py  session.py
doc/: README.md  memory-system.md  rss-rag.md
evals/: rss_rag_questions.json
gateway/: README.md  go.mod  main.go
gateway/middleware/: usage.go
gateway/middlewares/: app.go
gateway/router/: app.go
gateway/service/: proxy.go
gateway/tests/: llm_proxy_test.go
rsshub/: docker-compose.yml
scripts/: evaluate_memory_retrieval.py  evaluate_rss_rag.py  index_rss_content.py  start_with_gateway.sh
services/: content.py  digest.py  image_workflow.py  rss.py  users.py
services/account/: __init__.py  bindings.py  conversation_memories.py  conversations.py  memories.py  memory_consolidation.py  subscriptions.py  users.py  web_auth.py
services/manga_honyaku/: ocr.py  pic_process.py  translate.py
services/manga_translate/: ocr.py  pic_process.py  translate.py
services/rss_pipeline/: __init__.py  content_index.py  content_store.py  digest.py  feeds.py  refresher.py  retrieval.py
services/runtime/: __init__.py  rsshub.py
tests/: __init__.py  test_agent_memory.py  test_agent_tools.py  test_conversations.py  test_db_models.py  test_db_session.py  test_digest.py  test_llm_token_usage.py  test_llm_utils.py  test_main.py  test_manga_translate.py  test_memories.py  test_memory_consolidation.py  test_qq_app.py  test_router.py  test_rss_config.py  test_rss_feeds.py  test_rss_rag.py  test_rss_refresher.py  test_rsshub_container.py  test_tg_handlers.py  test_web_app.py
tests/fixtures/: memory_retrieval_cases.json
utils/: llm.py  logger.py
web/: __init__.py  app.py  routes.py  schemas.py
web/api/: __init__.py  admin.py  auth.py  (+3 more)
(+50 files in other folders)
