[project]
name = "moegal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "manga-ocr>=0.1.14",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "paramiko>=3.5",
    "pillow>=12.2.0",
    "pgvector>=0.4.2,<0.5",
    "psycopg[binary]>=3.3.4",
    "python-telegram-bot>=22.7",
    "qq-botpy>=1.2.1",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "ultralytics>=8.4.53",
    "uvicorn[standard]>=0.49.0",
]
